<resources>
    <string name="app_name">Glocal</string>
    <string name="title">glocal</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="createAccount">Don\'t have an account? Sign up now!</string>
    <string name="sellerDetails">Seller Details</string>
    <string name="shopDetails">Shop Details</string>
    <string name="sellerName">Name</string>
    <string name="sellerEmail">Email</string>
    <string name="sellerPhone">Phone</string>
    <string name="shopName">Shop Name</string>
    <string name="shopLocation">Shop Location</string>
    <string name="bidPrice">Bid Price</string>
    <string name="bidPriceInfo">*Bid Price is the amount paid by the seller for each time your shop is visited in the app.
        Higher bid price makes your shop more likely to be discovered.</string>
    <string name="categoryDetails">Category Details</string>
    <string name="homeDelivery">Home Delivery: </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="trialRoom">Trial Room: </string>
    <string name="buyerDetails">Buyer Details</string>
    <string name="buyerName">Name</string>
    <string name="buyerPhone">Phone</string>
    <string name="buyerEmail">Email</string>
    <string name="buyerGender">Gender: </string>
    <string name="buyerDOB">Date of Birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="buyerLocation">Location</string>
    <string name="otp">OTP</string>
    <string name="signup">Signup</string>
    <string name="sendOTP">Send OTP</string>
    <string name="resendOTP">Didn\'t receive the code? Resend OTP</string>
    <string name="verify">Verify OTP</string>
    <string name="sellerHeading">Seller Onboarding</string>
    <string name="promoteHeading">Promote your business</string>
    <string name="buyerHeading">Buyer Onboarding</string>
    <string name="discoverHeading">Discover Shops</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="title_activity_google_maps">Seller Location</string>
    <string name="selectCategory">Select Category</string>
    <string name="appliances">Appliances</string>
    <string name="books">Books</string>
    <string name="clothing">Clothing</string>
    <string name="electronics">Electronics</string>
    <string name="excericesFitness">Exercise &amp; Fitness</string>
    <string name="homeFurniture">Home &amp; Furniture</string>
    <string name="stationary">Stationary</string>
    <string name="toys">Toys</string>
    <string name="title_activity_buyer_search">BuyerSearch</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Akash Sarmah</string>
    <string name="nav_header_subtitle">+917002488850</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="button404">Back to Earth</string>
    <string name="shopCategory">Shop Category</string>
    <string name="shopRating">0.0</string>
    <string name="sponsored">Sponsored</string>
    <string name="shopTiming">(10am - 10pm)</string>
    <string name="shopOpen">Open Now</string>
    <string name="shopClosed">Closed</string>
    <string name="account">Account</string>
    <string name="help">Need Help?</string>
    <string name="rate">Rate us on the Play Store</string>
    <string name="contact">Contact Us</string>
    <string name="feedback">Send Feedback</string>
    <string name="signOut">Sign Out</string>
    <string name="details">Details</string>
    <string name="address">Address</string>
    <string name="bestseller">Bestsellers</string>
    <string name="averageCost">Average Cost</string>
    <string name="taxInfo">Exclusive of applicable taxes and charges, if any</string>
    <string name="paymentMode">Payment Modes Accepted</string>
    <string name="moreInfo">More Info</string>
    <string name="review">Review</string>
    <string name="location">Location</string>
    <string name="share">Share</string>
    <string name="call">Call</string>
    <string name="questions">Have any questions?</string>
    <string name="callInfo">Call the seller for more info</string>
    <string name="costInfo">₹ - Cheap \n ₹₹ - Moderate \n ₹₹₹ - Expensive</string>
    <string name="rateExperience">Rate your experience</string>
    <string name="reviewTitle">Start writing your review</string>
    <string name="reviewInfo">Be polite and friendly. This is a place for love and feedback, not hate.</string>
    <string name="submit">Submit</string>
    <string name="send">Send</string>
    <string name="enterFeedback">Enter feedback</string>
    <string name="feedbackInfo">Tell us what you love about the app, or what we could be doing better.</string>
    <string name="helpInfo">If you have something to say that doesn\'t fit here, please shoot us an email at help@glocal.com</string>

</resources>
