<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/great_vibes"
        android:text="@string/title"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:textColor="@color/colorAccent"
        android:shadowColor="@color/colorPrimary"
        android:textSize="70sp"
        />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/sellerDetails"
        android:textSize="18sp"
        android:layout_below="@+id/title"

        />

    <EditText
        android:id="@+id/sellerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/subtitle"
        android:layout_marginTop="30dp"
        android:inputType="phone"
        android:fontFamily="@font/quicksand"
        android:hint="@string/sellerName"/>

    <com.anishmistry.glocal.MultiSelectSpinner
        android:id="@+id/sellerCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subtitle"
        android:layout_marginTop="40dp"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/sellerPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sellerName"
        android:layout_marginTop="20dp"
        android:inputType="phone"
        android:fontFamily="@font/quicksand"
        android:hint="@string/sellerPhone" />

    <EditText
        android:id="@+id/sellerEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sellerPhone"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/quicksand"
        android:hint="@string/sellerEmail" />

    <TextView
        android:id="@+id/homeDelivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sellerName"
        android:fontFamily="@font/quicksand"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        android:text="@string/homeDelivery"
        android:textSize="18sp"/>

    <RadioGroup
        android:id="@+id/radioHomeDelivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/sellerPhone"
        android:layout_toEndOf="@+id/homeDelivery"
        android:layout_toRightOf="@id/homeDelivery"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:visibility="invisible"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioHomeDeliveryYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand"
            android:textSize="18sp"
            android:text="@string/yes" />

        <RadioButton
            android:id="@+id/radioHomeDeliveryNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:fontFamily="@font/quicksand"
            android:textSize="18sp"
            android:text="@string/no" />

    </RadioGroup>

    <Button
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sellerEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_style"
        android:fontFamily="@font/quicksand"
        android:text="@string/signup"
        android:textSize="18sp"
        android:textColor="#FFF"
        android:elevation="50dp"
        android:visibility="invisible"
        android:shadowColor="@color/editText"/>

</RelativeLayout>