<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".Login">

    <!--<TextView-->
        <!--android:id="@+id/title"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:fontFamily="@font/great_vibes"-->
        <!--android:text="@string/title"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:gravity="center_horizontal"-->
        <!--android:textColor="@color/colorAccent"-->
        <!--android:shadowColor="@color/colorPrimary"-->
        <!--android:elevation="20dp"-->
        <!--android:textSize="70sp"-->
        <!--/>-->

    <ImageView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/glocal_logo"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/phoneTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginTop="50dp"
        android:text="@string/sellerPhone"
        android:textSize="12sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="#000"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneTitle"
        android:layout_marginTop="5dp"
        android:inputType="number"
        android:fontFamily="@font/quicksand"
        android:hint="@string/buyerPhone"/>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_style"
        android:fontFamily="@font/quicksand"
        android:text="@string/login"
        android:textSize="18sp"
        android:textColor="#FFF"
        android:elevation="50dp"
        android:shadowColor="@color/editText"/>

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:fontFamily="@font/quicksand"
        android:text="@string/createAccount" />

</RelativeLayout>